<resources>
    <string name="app_name">Registration App</string>
    <string name="form">Registration Form</string>
    <string name="slogan">Welcome to Adventure Learning Club!</string>
    <string name="name">Full Name:</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="student_id">Student ID</string>
    <string name="school">School</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="register">Register</string>
</resources>